# src/auth/auth.router.ts
@@ -1,10 +1,14 @@
 import { Router } from "express";
-import AuthMiddleware from "./auth.middleware";
 import AuthController from "./auth.controller";
+import { checkFields, checkIfUserExists, checkUserAlreadyExists } from "./auth.middleware";
+import { checkAuth, userIsAdmin } from "../common/middleware";
 
 
 const authRouter = Router();
 
-authRouter.post('/register', AuthMiddleware.checkFields, AuthMiddleware.checkUserAlreadyExists, AuthController.register);
-authRouter.post('/login', AuthMiddleware.checkFields, AuthController.login);
+authRouter.post('/register', checkFields, checkUserAlreadyExists, AuthController.register);
+authRouter.post('/login', checkFields, checkIfUserExists, AuthController.login);
+
+authRouter.get('/', checkAuth, userIsAdmin, AuthController.getAllUsers);
+authRouter.get('/:id', checkAuth, userIsAdmin, AuthController.getUserByHisId);
 export default authRouter;
