# src/translate/translate.router.ts
@@ -1,8 +1,11 @@
 import { Router } from "express";
 import translateController from "./translate.controller";
+import { checkAuth } from "../common/middleware";
 
 const translateRouter = Router();
 
-translateRouter.post('/', translateController.translateString);
+translateRouter.post('/', checkAuth, translateController.translateString);
+
+translateRouter.get('/:discordId', checkAuth, translateController.getTranslationsByDiscordId);
 
 export default translateRouter;
